--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
     {
       "type": "shell",
       "label": "swa start",
-      "command": "npm run swa start http://localhost:8080 --api http://localhost:7071",
+      "command": "npm run swa -- start dist --api=http://localhost:7071",
       "isBackground": true,
       "problemMatcher": {
         "owner": "custom",
@@ -18,7 +18,7 @@
         }
       },
       "dependsOn": [
-        "npm run serve",
+        "npm run build",
         "func start"
       ],
       "options": {
@@ -27,20 +27,8 @@
     },
     {
       "type": "shell",
-      "label": "npm run serve",
-      "command": "npm run serve",
-      "isBackground": true,
-      "problemMatcher": {
-        "owner": "custom",
-        "pattern": {
-          "regexp": "^$"
-        },
-        "background": {
-          "activeOnStart": true,
-          "beginsPattern": "^.*Starting development server.*$",
-          "endsPattern": "^.*Compiled successfully.*$"
-        }
-      },
+      "label": "npm run build",
+      "command": "npm run build",
       "dependsOn": "npm install app",
       "options": {
         "cwd": "${workspaceFolder}"
