--- a/staticwebapp.config.json
+++ b/staticwebapp.config.json
@@ -9,7 +9,7 @@
         "rewrite": "/.auth/logout"
       },
       {
-        "route": "/need/to/be/authenticated",
+        "route": "/need/authentication",
         "allowedRoles": ["authenticated"]
       }
     ],
